# Multi-Rag-MediCode

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/code_kb/: cpt.json  hcpcs.json  icd10.json
src/medcode_rag/: .env  config.py  logging_config.py  pipeline.py
src/medcode_rag/api/: main.py  middleware.py
src/medcode_rag/audit/: db.py
src/medcode_rag/embeddings/: embedder.py
src/medcode_rag/extraction/: ner.py
src/medcode_rag/feedback/: logger.py
src/medcode_rag/generation/: encoder.py  prompts.py
src/medcode_rag/ingestion/: code_loader.py  error_loader.py  transcript_loader.py
src/medcode_rag/models/: schemas.py
src/medcode_rag/retrieval/: retriever.py  vector_store.py
src/medcode_rag/security/: auth.py  phi.py
src/medcode_rag/validation/: rules.py
