[project]
name = "medcode-rag"
version = "1.0.0"
description = "Production RAG system for medical encoding"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "qdrant-client>=1.11.0",
    "numpy>=1.24,<2.0",
    "openai>=1.50.0",
    "medspacy>=1.3.1",
    "spacy>=3.7.0,<3.8.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "tenacity>=9.0.0",
    "slowapi>=0.1.9",
    "python-json-logger>=2.0.7",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medcode_rag"]
